Added JS control for the two buttons

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     </div>
     <div class="modal-overlay" id="modal-overlay"></div>
     <div class="modal-container" id="modal-container-not-scrollable">
-
+        <div><button class="modal-close-button">Close</button></div>
     </div>
     <div class="modal-container" id="modal-container-scrollable">
-
+        <div><button class="modal-close-button">Close</button></div>
     </div>
     <script src="js/scripts.js"></script>
 </body>
