Added controls for opening and closing the modal. Added a little more styling.

--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
     </div>
     <div class="modal-overlay" id="modal-overlay"></div>
     <div class="modal-container" id="modal-container-not-scrollable">
-        <div><button class="modal-close-button">Close</button></div>
+        <div class="modal-container-controls">
+            <button class="modal-container-close-button">Close</button>
+        </div>
+        <div>Content of non scrollable modal</div>
     </div>
     <div class="modal-container" id="modal-container-scrollable">
-        <div><button class="modal-close-button">Close</button></div>
+        <div class="modal-container-controls">
+            <button class="modal-container-close-button">Close</button>
+        </div>
+        <div>Content of scrollable modal</div>
     </div>
     <script src="js/scripts.js"></script>
 </body>
