Added default scrollable modal

--- a/index.html
+++ b/index.html
@@ -33,13 +33,22 @@
         <div class="modal-container-controls">
             <button class="modal-container-close-button">Close</button>
         </div>
-        <div>Content of non scrollable modal</div>
+        <div class="modal-container-content">
+            <p><strong>Default modal with overflow-y: auto</strong></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim praesent elementum facilisis leo vel fringilla est ullamcorper. Et netus et malesuada fames ac turpis egestas maecenas pharetra. Euismod elementum nisi quis eleifend quam. Aliquam eleifend mi in nulla posuere sollicitudin. Lorem ipsum dolor sit amet consectetur adipiscing elit duis. Id diam maecenas ultricies mi eget mauris pharetra et. Elit sed vulputate mi sit amet mauris commodo. Lorem ipsum dolor sit amet consectetur. Sed vulputate odio ut enim blandit volutpat maecenas. Aliquet bibendum enim facilisis gravida neque convallis a cras semper. Amet luctus venenatis lectus magna. Tellus id interdum velit laoreet. Volutpat consequat mauris nunc congue nisi vitae suscipit. Bibendum ut tristique et egestas quis ipsum suspendisse. Scelerisque eu ultrices vitae auctor eu augue ut. Viverra maecenas accumsan lacus vel facilisis volutpat. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Nisl pretium fusce id velit ut.</p>
+            <p>Nullam vehicula ipsum a arcu cursus vitae congue. Est ante in nibh mauris cursus. Tellus id interdum velit laoreet id donec ultrices tincidunt arcu. Viverra ipsum nunc aliquet bibendum enim. Neque egestas congue quisque egestas diam in arcu cursus. Duis ut diam quam nulla porttitor massa. Morbi tincidunt ornare massa eget egestas purus viverra accumsan. Sed sed risus pretium quam vulputate. Sapien eget mi proin sed libero enim. Pellentesque nec nam aliquam sem et tortor. Tellus in hac habitasse platea. Sollicitudin nibh sit amet commodo nulla facilisi. Nulla pharetra diam sit amet nisl suscipit adipiscing bibendum est. Elementum pulvinar etiam non quam.</p>
+        </div>
     </div>
     <div class="modal-container" id="modal-container-scrollable">
         <div class="modal-container-controls">
             <button class="modal-container-close-button">Close</button>
         </div>
-        <div>Content of scrollable modal</div>
+        <div class="modal-container-content">
+            <p><strong>Modal with fixed and scrollable content</strong></p>
+            <p>TO BE FINISHED</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim praesent elementum facilisis leo vel fringilla est ullamcorper. Et netus et malesuada fames ac turpis egestas maecenas pharetra. Euismod elementum nisi quis eleifend quam. Aliquam eleifend mi in nulla posuere sollicitudin. Lorem ipsum dolor sit amet consectetur adipiscing elit duis. Id diam maecenas ultricies mi eget mauris pharetra et. Elit sed vulputate mi sit amet mauris commodo. Lorem ipsum dolor sit amet consectetur. Sed vulputate odio ut enim blandit volutpat maecenas. Aliquet bibendum enim facilisis gravida neque convallis a cras semper. Amet luctus venenatis lectus magna. Tellus id interdum velit laoreet. Volutpat consequat mauris nunc congue nisi vitae suscipit. Bibendum ut tristique et egestas quis ipsum suspendisse. Scelerisque eu ultrices vitae auctor eu augue ut. Viverra maecenas accumsan lacus vel facilisis volutpat. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Nisl pretium fusce id velit ut.</p>
+            <p>Nullam vehicula ipsum a arcu cursus vitae congue. Est ante in nibh mauris cursus. Tellus id interdum velit laoreet id donec ultrices tincidunt arcu. Viverra ipsum nunc aliquet bibendum enim. Neque egestas congue quisque egestas diam in arcu cursus. Duis ut diam quam nulla porttitor massa. Morbi tincidunt ornare massa eget egestas purus viverra accumsan. Sed sed risus pretium quam vulputate. Sapien eget mi proin sed libero enim. Pellentesque nec nam aliquam sem et tortor. Tellus in hac habitasse platea. Sollicitudin nibh sit amet commodo nulla facilisi. Nulla pharetra diam sit amet nisl suscipit adipiscing bibendum est. Elementum pulvinar etiam non quam.</p>
+        </div>
     </div>
     <script src="js/scripts.js"></script>
 </body>
